    - Further improved vertical division of space
    - Time signature changes are now printed
    - Now shows ottava bassa/alta signs
    - Added support for printing triplet silences
    - Fixed bug where random notes would appear at the far right of the page
    - Fixed rendering notes with more than 1 flags (was broken when not beamed)

1.2b5
- More minor linux fixes
- Added Code::Blocks project
- Fixed crash when clicking below last track
- Major refactor of render system : allow software rendering where OpenGL is not optimal
- Fixed multiple printing-related crashes and infinite recursions
- Removed GLUT dependency from OpenGL renderer. consequence : anti-aliased fonts and better Linux support.
- Fixed time signature editor popping-up when opening a file
- Fixed rounding issues when zooming
- Fixed playback ending too quickly
- Allowed moving notes by octave with shift+up/down
- Allowed moving notes by one measure with shift+left/right
- G clef is now rendered (roughly) on printed scores
- You can now choose the default view for score editor in preferences
- Fixed repetiton detection on multiple-track printing
- Improvements to maximize mode

1.2b4
- Switched to unified (native) toolbar on mac  (WARNING: requires patching wxWidgets, see docs)
- A few linux changes
- Fixed control editor to allow minimal value (0), namely allowing to turn Sustain off.
- Fixed (yet another) bug in accidental handling
- More intelligently decide if notes on middle C belong to F clef or G clef
- In editor popup menus, don't show score options in keyboard mode
- Fixed docking tracks, which was broken in last release
- Made 'follow playback' easier to follow by scrolling only on measure change
- Fixed undoing guitar tuning changes
- When printing multiple tracks, draw a line between them to make clear they belong toghether
- Fixed silences being drawn in repetitions when printing
- More minot tweaks to printing
- Added ability to maximize tracks